# configscanning

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: actions.yaml
configscanning/: comparefiles.py  git_change_scanner.py  githuborg.py  githubrepo.py  k8sutils.py  repolisttranscriber.py
configscanning/scanners/: filelister.py
tests/: test_comparefiles.py  test_githubrepo.py  test_repolisttranscriber.py  test_scan_e2e.py
