[project]
name = "configscanning"
version = "0.1.0"
description = "Service management resource deployer"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Telespazio UK Ltd", email = "alex.hayward@telespazio.com" }
]
maintainers = [
  {name = "Telespazio UK Ltd", email = "alex.hayward@telespazio.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "boto3",
  "filelock",
  "kubernetes",
  "pulsar-client",
  "pygit2",
  "pygithub",
  "pyyaml",
]

[dependency-groups]
dev = [
    "boto3-stubs[s3]>=1.42.44",
    "moto",
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-mock",
    "pytest-watcher",
    "pytest-xdist",
    "ruff",
    "validate-pyproject",
]

[project.urls]
"Homepage" = "https://ai-pipeline.org/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
markers = [
  "integrationtest: Integration test (talks to GitHub)"
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
    "E",    # Pycodestyle errors
    "W",    # Pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "FAST", # FastAPI
    "RUF",  # RUF-specific rules
    "SIM",  # Simplifications
    "B",    # Bugbear
    "ANN",  # Annotations
    "PLC",  # Pylint convention
    "PLE",  # Pylint errors
    "UP",   # pyupgrade
    "FURB", # refurb
    "PT",   # pytest
]
ignore = [
    "E501",   # line too long
    "SIM108", # ternary operator
    "SIM103", # return bool directly
    "B008",   # function call in default argument (incompatible with FastAPI)
    "ANN401", # dynamically typed expressions (Any) are disallowed
]
